# ironhide

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.claude-plugin/: plugin.json
.claude-scratchpad/: verify_phase2_core_metrics.md
.github/workflows/: ci.yml  release.yml
apps/dashboard/: debug-charts.spec.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/server/: package.json
docs/: PLUGIN_STANDARDS.md  TAURI_APP_SPEC.md
screenshots/: .gitkeep
scripts/: install-plugin.sh  setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  github.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/export/: csv_export.rs  mod.rs
src-tauri/src/metrics/: cost.rs  developer.rs  mod.rs  session.rs  tokens.rs
src-tauri/src/models/: metrics.rs  mod.rs  session.rs  turn.rs
src-tauri/src/parser/: jsonl.rs  mod.rs  session.rs
src-tauri/src/patterns/: detector.rs  mod.rs  types.rs
src-tauri/src/recommendations/: engine.rs  mod.rs  types.rs
src-tauri/src/trends/: daily.rs  mod.rs  monthly.rs  weekly.rs
src-tauri/src/watcher/: handler.rs  mod.rs
src/hooks/: useMetrics.ts  useSessions.ts  useThemeColors.ts  useTrends.ts
src/lib/: store.ts  tauri.ts  utils.ts
src/pages/: Compare.tsx  Dashboard.tsx  Performance.tsx  Projects.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx  (+2 more)
(+169 files in other folders)
